# Web-Scrapping-Scripts

./: README.md
cisa/: Taskfile.yml  pyproject.toml
cisa/cisa_scrapping/: main.py  settings.py
cisa/cisa_scrapping/output/soup/: CISA_advisories_1  CISA_advisories_2  CISA_advisories_3  CISA_advisories_4  CISA_advisories_5  CISA_advisories_6
cisa/cisa_scrapping/scrape/: operations.py  service.py
cisa/cisa_scrapping/scrape/utils/links_archive/: links_that_need_to_be_parsed.json  parsed_links.json
google_scholar/.ipynb_checkpoints/: Google_Scholar_Scrapping-checkpoint.ipynb
literotica/: Taskfile.yml  pyproject.toml
literotica/literotica_scrapping/: main.py  settings.py
literotica/literotica_scrapping/output/: BADSAM689.json  Schaede.json  TikTikKobold.json
literotica/literotica_scrapping/scrape/: operations.py  service.py
literotica/literotica_scrapping/scrape/utils/: authors_links.json  links_for_authors_categories.json
wattpad/: Taskfile.yml  pyproject.toml
wattpad/wattpad_scrapping/: main.py  settings.py
wattpad/wattpad_scrapping/output/: wattpad_stories_1.json
wattpad/wattpad_scrapping/scrape/: operations.py  service.py
wattpad/wattpad_scrapping/scrape/utils/: links_that_need_to_be_parsed.json  parsed_links.json
