[tool.poetry]
name = "cisa"
version = "0.1.0"
description = ""
authors = ["Andreea Radu <andreearadu39@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fake-useragent = "^1.5.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
